syntax = "proto3";
package response;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_sizecache_all) = false;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;
option (gogoproto.populate_all) = true;
//返回数据为字符串，用于新建修改删除类的成功失败提示
message CommonRep {
    uint32 code = 1 [(gogoproto.jsontag) = "code"];
    string message = 2;
    string details = 3;
}

message TinyRep {
    uint32 code = 1 [(gogoproto.jsontag) = "code"];
    string message = 2;
}